--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					//si on a appuyé sur le bouton nouvelle partie
 					if(nouveau != 0)
 					{
-alert(mesChances);
+						//alert(mesChances);
 						if(mesChances < 1 && winning != 1)
 						{
 							$('#message').append("VOUS AVEZ PERDU!!");
