Few bug corrections and game functionality
I still have a bug when all the letters are found, you have to press another key to have the congrats

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 
 				//get random number
 				myRand = Math.floor(Math.random()*55);
-
+				alert(myRand);
 				//getting word
 				getWord(myRand);
-				//alert(myWord);
+				
 
 				showWord();
 			}
