--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				
 				//lire le fichier - read file
 				readFile();
-				//alert("la partie est réinitialisée et on commence à préparer la prochaine");
+				alert("The game is cleared and ready to get the next one going, but for some reason, if I comment this line it stops working on the first click of the nouvelle partie button.");
 
 				//get random number
 				myRand = Math.floor(Math.random()*55);
